修改了项目结构

--- a/config/pro.cfg
+++ b/config/pro.cfg
@@ -1,4 +1,4 @@
 [django]
 debug = False
 template_dubug = False
-allowed_hosts = ["{project_name}.zoneke.com"]
+allowed_hosts = ["{{project_name}}.zoneke.com"]
