修改了目录结果

--- a/config/_default.cfg
+++ b/config/_default.cfg
@@ -1,5 +1,26 @@
+[sentry]
+dsn =
 [django]
 debug = True
 template_dubug = True
 domain = 127.0.0.1
 allowed_hosts = []
+app_host_name = http://{{project_name}}.zoneke.com
+
+
+[upyun]
+UPYUN_BUCKET = zoneke-img
+UPYUN_USER = shadow
+UPYUN_PASS = ccy900303
+IMG_HOST = http://zoneke-img.b0.upaiyun.com/
+
+
+[db]
+engine = django.db.backends.mysql
+username = shadow
+password = 900303
+db_name = {{project_name}}
+
+[hertz]
+email_to = chenchiyuan03@gmail.com
+email_from = zoneke.ccy@gmail.com
