--- a/config/_default.cfg
+++ b/config/_default.cfg
@@ -21,6 +21,6 @@ username = shadow
 password = 900303
 db_name = {{ project_name }}
 
-[hertz]
+[settings]
 email_to = chenchiyuan03@gmail.com
 email_from = zoneke.ccy@gmail.com
